--- a/html/study/index.html
+++ b/html/study/index.html
@@ -11,5 +11,14 @@
         <h4>제목</h4>
         <h5>제목</h5>
         <h6>제목</h6>
+        <p>
+            문장
+        </p>
+        <ul>
+            <li>list1</li>
+            <li>list2</li>
+        </ul>
+        <div>div</div>
+        <span>span</span>
     </body>
 </html>
