--- a/html/study/index실습.html
+++ b/html/study/index실습.html
@@ -11,8 +11,8 @@
         <h1>자기소개서</h1>
     </div>
     <ul>
-        <li>이름 : 준영</li>
-        <li>나이 : 23</li>
+        <li>이름 : <input type="text"></li>
+        <li>나이 : <input type="text"></li>
         <li>
             취미
             <ul>
@@ -21,5 +21,10 @@
             </ul>
         </li>
     </ul>
+    <h2>한줄소개</h2>
+    <p>안녕하세요. 저는 준영이고, 나이는 23살입니다. 현재 프론트 언어를 공부하고 있습니다.</p>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <h3>개발 공부를 하게 된 이유</h3>
+    <p>저는 과거부터 무언가를 만드는데 흥미가 있으며, 책을 읽다 개발에 흥미를 가지게 되어 프로그래밍을 공부하기 시작했습니다.</p>
 </body>    
 </html>
