--- a/html/study/index실습.html
+++ b/html/study/index실습.html
@@ -26,5 +26,8 @@
     <textarea name="" id="" cols="30" rows="10"></textarea>
     <h3>개발 공부를 하게 된 이유</h3>
     <p>저는 과거부터 무언가를 만드는데 흥미가 있으며, 책을 읽다 개발에 흥미를 가지게 되어 프로그래밍을 공부하기 시작했습니다.</p>
+<!-- <p 속성="속성값">  <input type="password">를 하면 입력을 하면 ...만 보인다. text면 보인다.-->
+
+    
 </body>    
 </html>
