--- a/html/study/index실습2.html
+++ b/html/study/index실습2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     </head>
 <body>
-    <input type="text">
-    <input type="password">
+    <input type="text" placeholder="아이디를 입력해주세요." id="id" class="class">
+    <input type="password" placeholder="비밀번호를 입력해주세요." id="id" class="class">
     <input type="checkbox">
     <input type="range">
     <input type="file">
