--- a/html/study/index실습2.html
+++ b/html/study/index실습2.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     </head>
 <body>
-    <input type="text" placeholder="아이디를 입력해주세요." id="id" class="class">
-    <input type="password" placeholder="비밀번호를 입력해주세요." id="id" class="class">
+    <input type="text" name="id" placeholder="아이디를 입력해주세요." id="id" class="class">
+    <!--name을 이용하면 id는 뭐고, password는 뭐라고 전송이 된다. -->
+    <input type="password" name="password" placeholder="비밀번호를 입력해주세요." id="id" class="class">
     <input type="checkbox">
     <input type="range">
     <input type="file">
